--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -445,9 +445,21 @@ These last examples are promising developments, but [are not ready for live revi
 	\end{figure}
 
 	\begin{figure}
-	\includegraphics[width=\linewidth]{../images/wss_recall_burden_boxplot}
-	\caption{Work saved, recall and additional burden across a variety of stopping criteria}
-	\label{additional-burden-missed-recall}
+		\includegraphics[width=\linewidth]{../images/wss_recall_burden_boxplot}
+		\caption{Work saved, recall and additional burden across a variety of stopping criteria}
+		\label{additional-burden-missed-recall-boxplots}
+	\end{figure}
+
+	\begin{figure}
+	\includegraphics[width=\linewidth]{../images/results_hex}
+	\caption{Work saved, recall across a variety of stopping criteria}
+	\label{results-hex}
+\end{figure}
+
+	\begin{figure}
+	\includegraphics[width=\linewidth]{../images/ab_recall_studies}
+	\caption{Work saved, recall across a variety of stopping criteria}
+	\label{ab_recall_studies}
 \end{figure}
 
 	
